--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,3 @@
-$body-background-color: #c8d6e5;
-
-body {
-  background-color: $body-background-color;
-}
+@import "styles/general.scss";
+@import "styles/header.scss";
+@import "styles/section-intro.scss";
