Visual part done

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,8 @@
 @import "styles/general.scss";
 @import "styles/header.scss";
 @import "styles/section-intro.scss";
+@import "styles/section-about.scss";
+@import "styles/section-solutions.scss";
+@import "styles/section-partnership.scss";
+@import "styles/section-contact.scss";
+@import "styles/footer.scss";
