--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -14,26 +14,26 @@ html {
 
 body {
   font-family: "Ubuntu", sans-serif;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   background-color: $body-background-color;
   overflow-x: hidden;
   @media screen and (min-width: $mobile-m) {
-    font-size: 2rem;
+    font-size: 1.8rem;
   }
   @media screen and (min-width: $mobile-l) {
-    font-size: 2.3rem;
+    font-size: 2rem;
   }
   @media screen and (min-width: $desktop-m) {
-    font-size: 2.6rem;
+    font-size: 2.2rem;
   }
   @media screen and (min-width: $desktop-l) {
-    font-size: 2.9rem;
+    font-size: 2.4rem;
   }
 }
 
 @for $i from 1 through 6 {
   h#{$i} {
-    font-size: #{(100 + ((6 - $i) * 30)) + "%"};
+    font-size: #{(120 + ((6 - $i) * 17)) + "%"};
   }
 }
 
@@ -43,6 +43,7 @@ body {
 
 .container {
   margin: 0 auto;
+  padding: 0 15px;
   width: 100%;
   @media screen and (min-width: $desktop-s) {
     width: $desktop-s;
@@ -67,10 +68,33 @@ body {
   }
 }
 
+.column-2-3 {
+  width: 100%;
+  @media screen and (min-width: $mobile-l) {
+    width: 66.66667%;
+  }
+}
+
+.column-1-3 {
+  width: 100%;
+  @media screen and (min-width: $mobile-l) {
+    width: 33.33333%;
+  }
+}
+
+a {
+  color: $link-default-color;
+  &:hover,
+  &:active {
+    color: lighten($link-default-color, 10);
+  }
+}
+
 .img {
   display: block;
   height: auto;
   max-width: 100%;
+  margin: 0 auto;
 }
 
 .button {
@@ -79,12 +103,14 @@ body {
   background-color: $button-background-color;
   color: $button-default-color;
   font-size: 75%;
-  max-width: 100px;
+  max-width: 180px;
   padding: 0 1em 0 1.2em;
   border: 0 none;
   border-top-left-radius: $border-radius;
   border-bottom-left-radius: $border-radius;
   text-align: center;
+  margin-right: 40px;
+  margin-bottom: 15px;
   cursor: pointer;
   &:after {
     content: "";
@@ -95,5 +121,103 @@ body {
     height: 39px;
     background-image: url("assets/decorations/panel-ending-right.png");
     background-repeat: no-repeat;
+  }
+}
+
+p,
+ul {
+  margin-bottom: 1em;
+  &:last-child {
+    margin-bottom: 2em;
+  }
+}
+
+h2 {
+  position: absolute;
+  top: 1.5em;
+  left: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translateX(-50%);
+  width: 548px;
+  height: 123px;
+  color: #ffffff;
+  border-radius: 5px;
+  background-image: url("assets/decorations/panel-side-decoration.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 320px auto;
+  padding: 0 10px;
+  text-align: center;
+  margin: 0 auto;
+  @media screen and (min-width: $mobile-l) {
+    background-size: 548px auto;
+  }
+}
+
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: 0.5em;
+}
+
+.subpage-icon {
+  @media screen and (min-width: $desktop-m) {
+    position: absolute;
+    margin-left: 25px;
+    width: 138px;
+    height: 120px;
+    top: 1.7em;
+    left: 0;
+    background-repeat: no-repeat;
+    z-index: 9999;
+    &:after {
+      content: "";
+      position: absolute;
+      width: 138px;
+      height: 331px;
+      top: 115px;
+      left: 10px;
+      background-image: url("assets/decorations/icon-decoration.svg");
+      background-repeat: no-repeat;
+      z-index: 9995;
+    }
+  }
+}
+
+ul,
+ol {
+  margin-bottom: 1em;
+  li {
+    margin-left: 30px;
+  }
+}
+
+hr {
+  position: relative;
+  z-index: 9994;
+  margin-top: -5px;
+  height: 5px;
+  border: 0 none;
+  background-image: linear-gradient(
+    90deg,
+    rgba(191, 191, 191, 1) 0%,
+    rgba(96, 107, 117, 1) 40%,
+    rgba(96, 107, 117, 1) 60%,
+    rgba(191, 191, 191, 1) 100%
+  );
+  &:after {
+    content: "";
+    position: absolute;
+    top: -20px;
+    left: 50%;
+    width: 131px;
+    height: 40px;
+    background-repeat: no-repeat;
+    background-image: url("assets/decorations/hr-decoration.svg");
+    z-index: 9993;
+    transform: translateX(-50%);
   }
 }
