--- a/src/styles/section-intro.scss
+++ b/src/styles/section-intro.scss
@@ -1,7 +1,7 @@
 @import "variables.scss";
 
 #section-intro {
-  padding-top: 7em;
+  padding-top: 6em;
   padding-bottom: 3em;
   width: 100%;
   min-height: 100vh;
@@ -20,6 +20,15 @@
   @media screen and (min-width: $mobile-l) {
     min-height: 100vh;
   }
+  h1 {
+    font-size: 300%;
+    margin-bottom: 0.15em !important;
+  }
+  .sub-header {
+    font-size: 125%;
+    text-shadow: 1px 1px 3px #a1b6df;
+    margin-bottom: 1.25em !important;
+  }
   .intro-img {
     transform: translateX(-18%);
     margin: 0 auto;
@@ -34,10 +43,9 @@
       margin-bottom: 0.5em;
       text-align: center;
       font-weight: bold;
-      text-shadow: 3px 3px 2px rgba(155, 162, 238, 1),
-        -3px -3px 2px rgba(155, 162, 238, 1), 3px 0 2px rgba(155, 162, 238, 1),
-        0 3px 2px rgba(55, 62, 38, 1), -3px 0 2px rgba(55, 62, 38, 1),
-        0 -3px 2px rgba(55, 62, 38, 1);
+      text-shadow: 3px 3px 2px #8ea9d8, -3px -3px 2px #8ea9d8,
+        3px 0 12px #8ea9d8, 0 3px 2px #8ea9d8, -3px 0 2px #8ea9d8,
+        0 -3px 2px #8ea9d8;
       -webkit-text-stroke: 2px white;
       @media screen and (min-width: $mobile-l) {
         text-align: left;
