SPA finished and deployed

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -3,6 +3,7 @@
   padding: 20px;
   background-color: $primary-color;
   color: #ffffff;
+  font-size: 80%;
   & > .container {
     display: flex;
     flex-direction: row;
