--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -209,6 +209,7 @@
   .nav {
     position: fixed;
     @media screen and (min-width: $mobile-l) {
+      top: 27px;
       right: calc(50% - 600px);
       transform: translateX(calc(100% + 780px));
       transform-origin: center center;
