--- a/src/styles/section-contact.scss
+++ b/src/styles/section-contact.scss
@@ -42,27 +42,82 @@
     }
     label {
       display: block !important;
-      margin-bottom: 15px;
+      margin-bottom: 1.5em;
       font-size: 90%;
-      input {
+      #name-input,
+      #company-input,
+      #phone-input,
+      #email-input,
+      #submit-input {
         display: block;
-        margin: 15px 0;
+        margin: 10px 0 0 0;
+        padding: 5px;
         overflow: hidden;
-        font-size: inherit;
-        height: 30px;
-        margin-bottom: 25px;
+        font-size: 90%;
+        margin-bottom: 5px;
         border-radius: $border-radius;
-        border: 0 none;
+        border: 2px solid $secondary-color;
         width: 100%;
+        box-shadow: 1px 1px 12px 7px rgba($secondary-color, 0.75) inset;
+        &:focus {
+          box-shadow: 0 0 8px 1px $secondary-color;
+          border: 2px solid $primary-color;
+        }
+        &.good {
+          box-shadow: 1px 1px 12px 7px rgba(#5f5, 0.25) inset;
+          border: 2px solid #080;
+        }
+        &.wrong {
+          box-shadow: 1px 1px 12px 7px rgba(#f55, 0.25) inset;
+          border: 2px solid #800;
+        }
+      }
+      &[for="message-textarea"] {
+        margin-bottom: 0.5em;
+      }
+      #fileupload-input {
+        display: block;
+        margin: 1em 0;
+        box-shadow: 0 0 0 0 transparent;
+      }
+      #submit-input {
+        width: 100%;
+        height: 45px;
+        padding: 10px;
+        margin: 1.5em 0;
+        &:hover {
+          background-color: $secondary-color;
+        }
+        @media screen and (min-width: $mobile-l) {
+          width: 50%;
+          cursor: pointer;
+        }
       }
     }
     textarea {
       border-radius: $border-radius;
+      padding: 10px;
       border: 0 none;
       width: 100%;
-      margin-bottom: 15px;
+      margin: 0.5em 0 1.2em 0;
       font-size: inherit;
       font-family: inherit;
+      box-shadow: 1px 1px 12px 7px $secondary-color inset;
+      border: 2px solid $secondary-color;
+      &:focus {
+        box-shadow: 0 0 8px 1px $secondary-color;
+        border: 2px solid $primary-color;
+      }
+    }
+    p {
+      margin-bottom: 0;
+    }
+    span {
+      font-size: 85%;
+      color: #f55;
+      &.good {
+        color: #5f5;
+      }
     }
   }
 }
