--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -5,6 +5,7 @@
   color: #ffffff;
   font-size: 80%;
   & > .container {
+    display: -webkit-inline-box;
     display: flex;
     flex-direction: row;
     .partners {
