--- a/src/styles/section-partnership.scss
+++ b/src/styles/section-partnership.scss
@@ -8,7 +8,7 @@
       position: absolute;
       top: 1em;
       right: 0;
-      transform: rotate(90deg) translate(40%, -380px);
+      transform: rotate(90deg) translate(40%, -360px);
       font-size: 400%;
       font-weight: bold;
       color: adjust-hue(lighten(#9aa2ed, 5), 15);
@@ -20,9 +20,8 @@
     }
   }
   .big-button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: block;
+    line-height: 43px;
     width: 238px;
     height: 43px;
     color: #ccddff;
