--- a/src/styles/section-about.scss
+++ b/src/styles/section-about.scss
@@ -8,7 +8,7 @@
       position: absolute;
       top: 1em;
       right: 0;
-      transform: rotate(90deg) translate(35%, -210px);
+      transform: rotate(90deg) translate(35%, -200%);
       font-size: 400%;
       font-weight: bold;
       color: rgba($secondary-color, 0.75);
