--- a/src/styles/section-contact.scss
+++ b/src/styles/section-contact.scss
@@ -8,7 +8,7 @@
       position: absolute;
       top: 1em;
       right: 0;
-      transform: rotate(90deg) translate(40%, -230px);
+      transform: rotate(90deg) translate(40%, -230%);
       font-size: 400%;
       font-weight: bold;
       color: #bbbbbb;
