--- a/src/styles/section-partnership.scss
+++ b/src/styles/section-partnership.scss
@@ -8,7 +8,7 @@
       position: absolute;
       top: 1em;
       right: 0;
-      transform: rotate(90deg) translate(40%, -360px);
+      transform: rotate(90deg) translate(40%, -370%);
       font-size: 400%;
       font-weight: bold;
       color: adjust-hue(lighten(#9aa2ed, 5), 15);
