--- a/src/styles/section-solutions.scss
+++ b/src/styles/section-solutions.scss
@@ -7,7 +7,7 @@
       position: absolute;
       top: 1em;
       right: 0;
-      transform: rotate(90deg) translate(40%, -360px);
+      transform: rotate(90deg) translate(40%, -350%);
       font-size: 400%;
       font-weight: bold;
       color: rgba($primary-color, 0.25);
